BareMetal_Workspace/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
19:56:30 **** Incremental Build of configuration Debug for project 20_Systic_Interrupt ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DSTM32 -DSTM32F4 -DSTM32F411RETx -DDEBUG -DSTM32F411xE -c -I../Inc -I"C:/Users/kaver/OneDrive/Desktop/C_files/STM32/BareMetal Workspace/20_Systic_Interrupt/Drivers/CMSIS/Device/ST/STM32F4xx/Include" -I"C:/Users/kaver/OneDrive/Desktop/C_files/STM32/BareMetal Workspace/20_Systic_Interrupt/Drivers/CMSIS/Include" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
arm-none-eabi-gcc "../Src/systick.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DSTM32 -DSTM32F4 -DSTM32F411RETx -DDEBUG -DSTM32F411xE -c -I../Inc -I"C:/Users/kaver/OneDrive/Desktop/C_files/STM32/BareMetal Workspace/20_Systic_Interrupt/Drivers/CMSIS/Device/ST/STM32F4xx/Include" -I"C:/Users/kaver/OneDrive/Desktop/C_files/STM32/BareMetal Workspace/20_Systic_Interrupt/Drivers/CMSIS/Include" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/systick.d" -MT"Src/systick.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/systick.o"
arm-none-eabi-gcc -o "20_Systic_Interrupt.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\kaver\OneDrive\Desktop\C_files\STM32\BareMetal Workspace\20_Systic_Interrupt\STM32F411RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="20_Systic_Interrupt.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
C:/ST/STM32CubeIDE_1.19.0/STM32CubeIDE/plugins/com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.13.3.rel1.win32_1.0.0.202411081344/tools/bin/../lib/gcc/arm-none-eabi/13.3.1/../../../../arm-none-eabi/bin/ld.exe: warning: 20_Systic_Interrupt.elf has a LOAD segment with RWX permissions
Finished building target: 20_Systic_Interrupt.elf
 
arm-none-eabi-size  20_Systic_Interrupt.elf 
arm-none-eabi-objdump -h -S 20_Systic_Interrupt.elf  > "20_Systic_Interrupt.list"
   text	   data	    bss	    dec	    hex	filename
   5456	    100	   1900	   7456	   1d20	20_Systic_Interrupt.elf
Finished building: default.size.stdout
 
Finished building: 20_Systic_Interrupt.list
 
19:56:41 **** Incremental Build of configuration Debug for project 20_Systic_Interrupt ****
make -j8 all 
arm-none-eabi-size  20_Systic_Interrupt.elf 
   text	   data	    bss	    dec	    hex	filename
   5456	    100	   1900	   7456	   1d20	20_Systic_Interrupt.elf
Finished building: default.size.stdout
 
19:57:07 **** Incremental Build of configuration Debug for project 20_Systic_Interrupt ****
make -j8 all 
arm-none-eabi-size  20_Systic_Interrupt.elf 
   text	   data	    bss	    dec	    hex	filename
   5456	    100	   1900	   7456	   1d20	20_Systic_Interrupt.elf
Finished building: default.size.stdout
 
19:57:16 **** Incremental Build of configuration Debug for project 20_Systic_Interrupt ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DSTM32 -DSTM32F4 -DSTM32F411RETx -DDEBUG -DSTM32F411xE -c -I../Inc -I"C:/Users/kaver/OneDrive/Desktop/C_files/STM32/BareMetal Workspace/20_Systic_Interrupt/Drivers/CMSIS/Device/ST/STM32F4xx/Include" -I"C:/Users/kaver/OneDrive/Desktop/C_files/STM32/BareMetal Workspace/20_Systic_Interrupt/Drivers/CMSIS/Include" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
arm-none-eabi-gcc -o "20_Systic_Interrupt.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\kaver\OneDrive\Desktop\C_files\STM32\BareMetal Workspace\20_Systic_Interrupt\STM32F411RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="20_Systic_Interrupt.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
C:/ST/STM32CubeIDE_1.19.0/STM32CubeIDE/plugins/com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.13.3.rel1.win32_1.0.0.202411081344/tools/bin/../lib/gcc/arm-none-eabi/13.3.1/../../../../arm-none-eabi/bin/ld.exe: warning: 20_Systic_Interrupt.elf has a LOAD segment with RWX permissions
Finished building target: 20_Systic_Interrupt.elf
 
arm-none-eabi-size  20_Systic_Interrupt.elf 
arm-none-eabi-objdump -h -S 20_Systic_Interrupt.elf  > "20_Systic_Interrupt.list"
   text	   data	    bss	    dec	    hex	filename
   5364	    100	   1900	   7364	   1cc4	20_Systic_Interrupt.elf
Finished building: default.size.stdout
 
Finished building: 20_Systic_Interrupt.list
 
19:57:33 **** Incremental Build of configuration Debug for project 20_Systic_Interrupt ****
make -j8 all 
arm-none-eabi-size  20_Systic_Interrupt.elf 
   text	   data	    bss	    dec	    hex	filename
   5364	    100	   1900	   7364	   1cc4	20_Systic_Interrupt.elf
Finished building: default.size.stdout
 
19:57:44 **** Incremental Build of configuration Debug for project 20_Systic_Interrupt ****
make -j8 all 
arm-none-eabi-size  20_Systic_Interrupt.elf 
   text	   data	    bss	    dec	    hex	filename
   5364	    100	   1900	   7364	   1cc4	20_Systic_Interrupt.elf
Finished building: default.size.stdout
 
19:59:25 **** Incremental Build of configuration Debug for project 20_Systic_Interrupt ****
make -j8 all 
arm-none-eabi-gcc -mcpu=cortex-m4 -g3 -c -x assembler-with-cpp -MMD -MP -MF"Startup/startup_stm32f446zetx.d" -MT"Startup/startup_stm32f446zetx.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Startup/startup_stm32f446zetx.o" "../Startup/startup_stm32f446zetx.s"
arm-none-eabi-gcc -o "20_Systic_Interrupt.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\kaver\OneDrive\Desktop\C_files\STM32\BareMetal Workspace\20_Systic_Interrupt\STM32F411RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="20_Systic_Interrupt.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
C:/ST/STM32CubeIDE_1.19.0/STM32CubeIDE/plugins/com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.13.3.rel1.win32_1.0.0.202411081344/tools/bin/../lib/gcc/arm-none-eabi/13.3.1/../../../../arm-none-eabi/bin/ld.exe: warning: 20_Systic_Interrupt.elf has a LOAD segment with RWX permissions
Finished building target: 20_Systic_Interrupt.elf
 
arm-none-eabi-size  20_Systic_Interrupt.elf 
arm-none-eabi-objdump -h -S 20_Systic_Interrupt.elf  > "20_Systic_Interrupt.list"
   text	   data	    bss	    dec	    hex	filename
   5408	    100	   1900	   7408	   1cf0	20_Systic_Interrupt.elf
Finished building: default.size.stdout
 
Finished building: 20_Systic_Interrupt.list
 
20:00:05 **** Incremental Build of configuration Debug for project 20_Systic_Interrupt ****
make -j8 all 
arm-none-eabi-gcc "../Src/systick.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DSTM32 -DSTM32F4 -DSTM32F411RETx -DDEBUG -DSTM32F411xE -c -I../Inc -I"C:/Users/kaver/OneDrive/Desktop/C_files/STM32/BareMetal Workspace/20_Systic_Interrupt/Drivers/CMSIS/Device/ST/STM32F4xx/Include" -I"C:/Users/kaver/OneDrive/Desktop/C_files/STM32/BareMetal Workspace/20_Systic_Interrupt/Drivers/CMSIS/Include" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/systick.d" -MT"Src/systick.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/systick.o"
../Src/systick.c: In function 'Systick_1hz_interrupt':
../Src/systick.c:39:25: error: expected expression before '=' token
   39 |         SysTick->CTRL | = SYSTIC_TICKINT;
      |                         ^
make: *** [Src/subdir.mk:34: Src/systick.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.
20:00:40 **** Incremental Build of configuration Debug for project 20_Systic_Interrupt ****
make -j8 all 
arm-none-eabi-gcc "../Src/systick.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DSTM32 -DSTM32F4 -DSTM32F411RETx -DDEBUG -DSTM32F411xE -c -I../Inc -I"C:/Users/kaver/OneDrive/Desktop/C_files/STM32/BareMetal Workspace/20_Systic_Interrupt/Drivers/CMSIS/Device/ST/STM32F4xx/Include" -I"C:/Users/kaver/OneDrive/Desktop/C_files/STM32/BareMetal Workspace/20_Systic_Interrupt/Drivers/CMSIS/Include" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/systick.d" -MT"Src/systick.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/systick.o"
arm-none-eabi-gcc -o "20_Systic_Interrupt.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\kaver\OneDrive\Desktop\C_files\STM32\BareMetal Workspace\20_Systic_Interrupt\STM32F411RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="20_Systic_Interrupt.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
C:/ST/STM32CubeIDE_1.19.0/STM32CubeIDE/plugins/com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.13.3.rel1.win32_1.0.0.202411081344/tools/bin/../lib/gcc/arm-none-eabi/13.3.1/../../../../arm-none-eabi/bin/ld.exe: warning: 20_Systic_Interrupt.elf has a LOAD segment with RWX permissions
Finished building target: 20_Systic_Interrupt.elf
 
arm-none-eabi-size  20_Systic_Interrupt.elf 
arm-none-eabi-objdump -h -S 20_Systic_Interrupt.elf  > "20_Systic_Interrupt.list"
   text	   data	    bss	    dec	    hex	filename
   5400	    100	   1900	   7400	   1ce8	20_Systic_Interrupt.elf
Finished building: default.size.stdout
 
Finished building: 20_Systic_Interrupt.list
 
